--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -26,7 +26,7 @@
 
 .characterWrapper {
   position: fixed;
-  top: 0;
+  top: 128px;
   right: 0;
   min-height: 500px;
   width: 40%;
@@ -34,4 +34,14 @@
 
 .controlColumn {
   max-width: 50%;
+  isolation: isolate;
+}
+
+.perspectiveDecoration {
+  background-color: hsl(195deg, 20%, 86%);
+  width: 100%;
+  height: 40%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
